--- a/index.html
+++ b/index.html
@@ -1,18 +1,262 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Закрывающий тег</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/animations.css" />
-  </head>
-  <body class="page">
-    <header class="header"></header>
-    <main></main>
-    <script src="./scripts/like.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Закрывающий тег</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/variables.css" />
+  <link rel="stylesheet" href="./styles/globals.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/animations.css" />
+  <link rel="icon" href="./svg/favicon.svg">
+</head>
+
+<body class="page">
+  <header class="header section">
+    <a class="header-logo">&lt;/HTML&gt;</a>
+    <h1 class="title">закрывающий тег</h1>
+  </header>
+  <main>
+    <section class="section">
+      <h2 class="section__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;/HTML&gt;</span>
+        <img src="./images/photo_1card.jpg" class='images images_sepia-brightness' alt="Цитата: Тварь ли я лежащая">
+      </div>
+      <div class="section__text">
+        <p class="text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться
+          на учёбу. И, возможно,
+          подумать, как новые знания могут повлиять на ваше будущее.</p>
+        <p class="text">Настало время действовать.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">1 спринт: Я — чистый лист</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;/HTML&gt;</span>
+        <img src="./images/photo_2card.jpg" class='images images_contrast' alt="Пью кофе и учусь">
+      </div>
+      <div class="section__text">
+        <p class="text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из
+          них — страх
+          перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением
+          скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
+        <p class="text">Мотивирую себя всем, чем могу.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">1 спринт: А если не получится?</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;CSS&gt;</span>
+        <img src="./images/photo_3card.jpg" class='images images_invert' alt="Все получится!">
+      </div>
+      <div class="section__text">
+        <p class="text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и
+          смениться ожиданием
+          провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
+        <p class="text">Шаг за шагом все равно продолжаю идти дальше.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">2 спринт: Погоня за идеалом</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;desigions&gt;</span>
+        <img src="./images/photo_4card.jpg" class='images images_saturate' alt="Идеальная крыска Бискотта">
+      </div>
+      <div class="section__text">
+        <p class="text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё
+          впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не
+          подвержены перфекционизму
+          и вместо того, чтобы сделать идеально, старались просто сделать.</p>
+        <p class="text">Как бы ни хотелось сделать идеально, пока еще много ошибок. Но они важны для роста.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">2 спринт: О тех, кто рядом</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">care</span>
+        <img src="./images/photo_5card.jpg" class='images images_brightness' alt="Красивый ежедневник">
+      </div>
+      <div class="section__text">
+        <p class="text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого
+          мира). Вас
+          окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если
+          очередной
+          макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
+        </p>
+        <p class="text">Огромную поддержку оказывал наставник, помогал и подсказывал даже по очевидным вопросам.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">3 спринт: Обходные стратегии</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;support&gt;</span>
+        <img src="./images/photo_6card.jpg" class='images  images_grayscale' alt="Крыска Дольчи ищет стратегию к побегу">
+      </div>
+      <div class="section__text">
+        <p class="text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что
+          решения просто
+          иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
+        <p class="text">3 спринт оказался непростым, но уже привыкаю к учебному режиму, способам решения трудных задач.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">3 спринт: Когда опускаются руки</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;lifes-style: none;&gt;</span>
+        <img src="./images/photo_7card.jpg" class='images images_sepia' alt="Серый мрачный пейзаж">
+      </div>
+      <div class="section__text">
+        <p class="text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную
+          пора сдавать, и
+          задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна
+          концентрация. Вспомните, откуда вы её черпали.</p>
+        <p class="text">Путь разтия не может быть прямым, взлеты и падения - часть пути.</p>
+        <div class="section__like-buttom">
+          <button class="card__like-button" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+              <path fill="#000"
+                d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+            </svg>
+            </button>
+            <button class="button" type="button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="section page__section">
+      <h2 class="section__title">«Сейчас я здесь»</h2>
+      <div class="section__image">
+        <span class="section__image-label" aria-hidden="true">&lt;experience&gt;</span>
+        <img src="./images/photo_8card.jpg" class='images images_saturate' alt="Рука с леденцом на фоне елки">
+      </div>
+      <div class="section__text">
+        <p class="text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много
+          материала про
+          «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир
+          постоянно
+          меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто
+          путь — и есть результат.</p>
+        <p class="text">Анимации и декорирование вдохновили меня на идею для собственного проекта. Попробую во время каникул.</p>
+      <div class="section__like-buttom">
+        <button class="card__like-button" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none" class="like-icon">
+            <path fill="#000"
+              d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z" />
+          </svg>
+          </button>
+          <button class="button" type="button">
+          <span class="button__text">Like</span>
+        </button>
+      </div>
+    </div>
+    </section>
+    <section class="section__save">
+    <button 
+        class="button button-save" 
+        type="button" 
+        onclick="window['dialog'].showModal()" 
+        aria-controls="dialog"> 
+        <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
+          <use href="./svg/floppy.svg#save-icon"></use>
+        </svg>
+        <span class="button__text">
+          Сохранить на память
+        </span>
+      </button>
+    </div>
+    <dialog id="dialog" class="modal">
+      <div class="description-modal">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39" width="40" height="40" fill="none">
+          <use href="./svg/floppy.svg#save-icon"></use>
+        </svg>
+        <p class="modal__title">Вставьте дискету, чтобы продолжить</p>
+      </div>
+      <button 
+        type="button" 
+        class="modal__button" 
+        onclick="window['dialog'].close()">
+        <span class="button__text">Ок</span>          
+      </button>
+      </dialog>
+      </section>
+  </main>
+  <script src="./scripts/like.js"></script>
+</body>
 </html>
