--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
           подумать, как новые знания могут повлиять на ваше будущее.</p>
         <p class="text">Настало время действовать.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -65,22 +67,24 @@
           скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
         <p class="text">Мотивирую себя всем, чем могу.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -98,22 +102,24 @@
           провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
         <p class="text">Шаг за шагом все равно продолжаю идти дальше.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -132,22 +138,24 @@
           и вместо того, чтобы сделать идеально, старались просто сделать.</p>
         <p class="text">Как бы ни хотелось сделать идеально, пока еще много ошибок. Но они важны для роста.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -168,22 +176,24 @@
         </p>
         <p class="text">Огромную поддержку оказывал наставник, помогал и подсказывал даже по очевидным вопросам.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -203,22 +213,24 @@
         <p class="text">3 спринт оказался непростым, но уже привыкаю к учебному режиму, способам решения трудных задач.
         </p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -237,22 +249,24 @@
           концентрация. Вспомните, откуда вы её черпали.</p>
         <p class="text">Путь разтия не может быть прямым, взлеты и падения - часть пути.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
-                <path class="contour" fill="#000"
+                <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
-                <path class="main-body" fill="red"
+                <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="#fff"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
-              <path class="sparks" fill="red"
+              <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
       </div>
@@ -274,25 +288,27 @@
         <p class="text">Анимации и декорирование вдохновили меня на идею для собственного проекта. Попробую во время
           каникул.</p>
         <div class="section__like-buttom">
-          <button class="card__like-button" type="button">
+          <button class="card__icon-button" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" class="like-icon">
               <g class="heart">
                 <path class="contour" fill="var(--accent-color)"
                   d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z" />
                 <path class="main-body" fill="var(--like-color)"
                   d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z" />
-                <path class="core" fill="var(--accent-color)"
+                <path class="core" fill="var(--primary-white)"
                   d="M18 15h-3v3h3v-3Zm3 0h3v3h-3v-3Zm0 0h-3v3h3v-3Zm0-3h-3v3h3v-3Zm0 6h-3v3h3v-3Z" />
               </g>
               <path class="sparks" fill="var(--like-color)"
                 d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z" />
             </svg>
           </button>
-          <button class="button" type="button">
-            <span class="button__text">Like</span>
+          <button class="button card__like-button" type="button">
+            <span class="button__text">
+              Like
+            </span>
           </button>
         </div>
-      </div>
+        </div>
     </section>
 
     <section class="section__save">
@@ -311,7 +327,7 @@
           </svg>
           <p class="modal__title">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <button type="button" class="modal__button" onclick="window['dialog'].close()">
+        <button type="button" class="button modal__button" onclick="window['dialog'].close()">
           <span class="button__text">Ок</span>
         </button>
       </dialog>
